Bug 235666 - All tags no longer shown when the "Tags already assigned" button is clicked
Summary: All tags no longer shown when the "Tags already assigned" button is clicked
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Tags-Engine (other bugs)
Version First Reported In: 1.2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-28 23:00 UTC by Russell Harrison
Modified: 2012-06-27 10:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Russell Harrison 2010-04-28 23:00:34 UTC
Version:           1.2.0 (using KDE 4.4.2)
Compiler:          gcc
OS:                Linux (i686) release 2.6.32.11-99.fc12.i686.PAE
Installed from:    Fedora RPMs

The previous behavior when clicking the "Tags already assigned" button in the "Caption/Tags" tab would show all of the tags that had been assigned to the selected images.  The tags tree was fully expanded only showing tags applied to the selction.  This made reviewing my tagging changes very easy especially when asigning multiple tags found through the search box.

Now when I click the button it will only show me the highest level tags assigned. To see if other tags have been assigned I now need to expand each top level tag which shows both the assigned and unassigned children of that tag.  This basically requires manual inspection of all child tags to ensure that the proper ones are selected.

Also, if there is text in the search box clicking the "Tags already assigned" button will only show tags matching the text in the search box.  While this behavior is understandable and not unexpected I personally preferred the former behavior which was to show all tags assigned to the selected items.
Comment 1 Russell Harrison 2010-04-28 23:32:03 UTC
*** Bug 235671 has been marked as a duplicate of this bug. ***
Comment 2 Johannes Wienke 2010-04-29 11:05:10 UTC
Ok, adding an expansion to the tree should be no problem. But atm I don't have much time.

For the text filter: what about clearing the filter when clicking the assigned tags button?
Comment 3 Russell Harrison 2010-05-03 20:54:02 UTC
(In reply to comment #2)
> For the text filter: what about clearing the filter when clicking the assigned
> tags button?

My personal preference would be to have the search filter cleared when clicking the assigned tags button.
Comment 4 terri.bugs 2010-05-29 15:12:21 UTC
I see the same "wrong" behavior as Russell with the released version of digikam 1.2 although both problems were already fixed in svn when I did testing for tagging before 1.2's release. See bug 226872 and bug 227550. Are those fixes part of the released digikam's code or did they somehow get lost?
Comment 5 terri.bugs 2010-05-29 15:21:21 UTC
Ignore bug 227550, my mistake. Should have read more carefully.
Comment 6 Marcel Wiesweg 2011-01-25 22:19:58 UTC
SVN commit 1217126 by mwiesweg:

- fix AlbumTreeView's expandMatches so that a DirectMatch does not prevent
  recursion, in case there are additional ChildMatches.
- clear search bar when setting the assigned tags filter
  (the assigned tags filter was already cleared when changing the search
   bar, now it is symmetric)

BUG: 235666



 M  +16 -1     NEWS  
 M  +25 -7     digikam/albumtreeview.cpp  
 M  +16 -1     libs/imageproperties/imagedescedittab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1217126