- fix AlbumTreeView's expandMatches so that a DirectMatch does not prevent   recursion, in case there are additional ChildMatches. - clear search bar when setting the assigned tags filter   (the assigned tags filter was already cleared when changing the search    bar, now it is symmetric)

BUG: 235666


svn path=/branches/extragear/graphics/digikam/core/; revision=1217126